--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-#root, .App, .wrapper{
+#root, .App, .wrapper, html{
   height: 100%;
   width: 100%;
-  border-top: 1px solid red;
   box-sizing: border-box;
 }
 .wrapper {
